<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.presentation.sign.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sign_up_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/pink_500"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_up_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_id_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_label" />

                <EditText
                    android:id="@+id/et_sign_up_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@{!viewModel.inputId.empty &amp; !viewModel.isValidId ? @color/pink_500 : @color/grey_500}"
                    android:hint="@string/sign_id_hint"
                    android:inputType="text"
                    android:text="@={viewModel.inputId}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id_label" />

                <TextView
                    android:id="@+id/tv_sign_up_id_error"
                    visibility="@{!viewModel.inputId.empty &amp; !viewModel.isValidId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_id_error_msg"
                    android:textColor="@color/pink_500"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/et_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@+id/et_sign_up_id" />

                <TextView
                    android:id="@+id/tv_sign_up_pw_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_pw_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_id" />

                <EditText
                    android:id="@+id/et_sign_up_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@{!viewModel.inputPassword.empty &amp; !viewModel.isValidPW ? @color/pink_500 : @color/grey_500}"
                    android:hint="@string/sign_pw_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.inputPassword}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw_label" />

                <TextView
                    android:id="@+id/tv_sign_up_pw_error"
                    visibility="@{!viewModel.inputPassword.empty &amp; !viewModel.isValidPW}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_pw_error_msg"
                    android:textColor="@color/pink_500"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/et_sign_up_id"
                    app:layout_constraintTop_toBottomOf="@+id/et_sign_up_pw" />

                <TextView
                    android:id="@+id/tv_sign_up_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sing_up_name_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_pw" />

                <EditText
                    android:id="@+id/et_sign_up_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/grey_500"
                    android:hint="@string/sign_up_name_hint"
                    android:inputType="text"
                    android:text="@={viewModel.inputName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name_label" />

                <TextView
                    android:id="@+id/tv_sign_up_favorite_song_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up_song_label"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_sign_up_name" />

                <EditText
                    android:id="@+id/et_sign_up_favorite_song"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/grey_500"
                    android:hint="@string/sign_up_song_hint"
                    android:inputType="text"
                    android:text="@={viewModel.inputFavoriteSong}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_up_favorite_song_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_sign_up_button"
            android:enabled="@{viewModel.isValidInput}"
            android:onClick="@{()->viewModel.signUp()}"
            android:paddingVertical="10dp"
            android:text="@string/sign_up_success"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>